<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.virtualdeck.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.virtualdeck.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_decks"
        android:name="com.example.virtualdeck.ui.decks.DecksFragment"
        android:label="@string/title_decks"
        tools:layout="@layout/fragment_decks" />

    <fragment
        android:id="@+id/navigation_cards"
        android:name="com.example.virtualdeck.ui.cards.CardsFragment"
        android:label="@string/title_cards"
        tools:layout="@layout/fragment_cards" />

</navigation>