<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCardActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/create_card_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <!--TODO: REMOVE LATER-->
            <TextView
                android:id="@+id/text_create_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_card_activity_page"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/card_image_view"
                android:layout_height="500dp"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_card"
                android:contentDescription="@string/image_of_card" />

            <!--
            <Button
                android:id="@+id/upload_card_image_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/upload_card_image_button" />
            -->

            <EditText
                android:id="@+id/card_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                android:minHeight="48dp"
                android:hint="@string/create_card_card_name"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/card_game_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                android:minHeight="48dp"
                android:hint="@string/create_card_card_game_name"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/card_game_collection_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                android:minHeight="48dp"
                android:hint="@string/create_card_card_game_collection"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/card_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false"
                android:minHeight="48dp"
                android:hint="@string/create_card_card_description"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/card_print_series_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                android:minHeight="48dp"
                android:hint="@string/create_card_card_print_series"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/card_extra_info_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false"
                android:minHeight="48dp"
                android:hint="@string/create_card_card_extra_info"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/save_edited_card_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/save_card_button" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>