<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewCardTradeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/create_card_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!--TODO: REMOVE LATER-->
            <TextView
                android:id="@+id/text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Username"
                android:textAlignment="center"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/text_zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Zip Code"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/card_image_view"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/image_of_card"
                app:srcCompat="@drawable/ic_card" />

            <TextView
                android:id="@+id/card_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/create_card_card_name"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/card_game_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/create_card_card_game_name"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/card_game_collection_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/create_card_card_game_collection"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/card_description_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/create_card_card_description"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                android:scrollHorizontally="false"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/card_print_series_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/create_card_card_print_series"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/card_extra_info_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/create_card_card_extra_info"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                android:scrollHorizontally="false"
                android:paddingLeft="10dp" />

            <Button
                android:id="@+id/edit_card_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/edit_card_button" />

            <Button
                android:id="@+id/delete_card_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/delete_card_button" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>